src/main/k8s/ns-all/default-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-policy
  namespace: kk-ns
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              namespace: kk-ns
        - podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              namespace: kk-ns
        - podSelector: {}
